[package]
name = "constraint_rs_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version="2.0.12", features = ["derive", "proc-macro", "extra-traits", "full"] }
thiserror = "1.0.40"
itertools="0.10"

[dev-dependencies]
constraint_rs = { path="../constraint_rs" }
prettyplease = "0.2.4"
