[package]
name = "constraint_rs_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.12", default-features = false, features = [] }
proc-macro2 = "1.0"
quote = "1.0"
thiserror = "1.0.40"
itertools = "0.11"

[dev-dependencies]
prettyplease = "0.2.4"
