[package]
name = "constraint_rs_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
constraint_rs = { path = "../constraint_rs" }
constraint_rs_derive = { path = "../constraint_rs_derive" }
z3 = { version="0.11.2", features=[] }